image not showing issue fixed

--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@ body {
 }
 
 header {
-    background-image: url(B12A01-landing-launchpad/Assets/Hero-bg.png);
+    background-image: url(Hero-bg.png);
     height: 698px;
     margin: 0 auto;
 }
+
 
 nav {
     display: flex;
